# processing_lab

./: CMakeLists.txt
include/: functions.h  parsing.h
src/: data.txt  functions.cpp  input.txt  main.cpp  output.txt  parsing.cpp
